# server

./: .gitignore  Caddyfile  Cargo.toml  Config.toml  README.md  blog.mar  html.mar  imprint.md  index.html  local.caddy  make.mar  make.soil  markdown.mar  minimal.soil  privacy_policy.md  production.Caddyfile  server-setup.md  server.service  syntax-highlighting.mar
app/: .gitignore  README.md  pubspec.yaml
app/lib/: api.dart  dev_cards.dart  dev_tab.dart  main.dart  utils.dart
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
assets/: article-full.html  article-teaser.html  article.html  error.html  fonts.css  index.html  me.html  page.html  prism.css  prism.js  rss-article.xml  rss-feed.xml  scripts.js  style.css  timeline-article.html  timeline.html
blog/: 1970-01-01-test.md  2020-10-08 chest-intro.md  2020-10-08-chest-intro.md  2020-10-09 chest-chunky.md  2020-10-09-chest-chunky.md  2020-11-03-contact.md  2021-07-01 bachelorarbeit.md  2021-07-16-test.md  2021-07-18 no-dark-mode-toggle.md  2021-07-18-no-dark-mode-toggle.md  2021-08-14 developing-this-blog.md  2021-08-14-developing-this-blog.md  2021-09-12 gira.md  2021-09-12-gira.md  2021-10-05 gira-hack.md  2021-10-05-gira-hack.md  2021-11-12 no-templating-engine.md  2021-11-12-no-templating-engine.md  2021-12-29 midi-music.md  2021-12-29-midi-music.md  2022-01-23 static-typing.md  2022-01-23-static-typing.md  2022-02-22 meta-strings.md  2022-02-22-meta-strings.md  2022-03-20-coronoise.md  2022-03-21 coronoise.md  2022-03-21-coronoise.md  2022-04-15 jupyter-energy.md  2022-04-15-jupyter-energy.md  2022-05-21 mehl.md  2022-05-21-mehl.md  2023-08-06 candy.md  2023-08-06-candy.md  2023-08-14 kakuro.md  2023-08-14-kakuro.md  2023-09-29 candy-compiler-pipeline.md  2023-09-29-candy-compiler-pipeline.md  2023-12-04 candy-concurrency.md  2023-12-04-candy-concurrency.md  2023-12-04-candy-slim-runtime.md  (+73 more)
files/: burn.m4a  mia-and-sebastians-theme.m4a  paralyzer.m4a
src/: assets.rs  blog.rs  handlers.rs  main.rs  maintenance.rs  shortcuts.rs  static_assets.rs  templates.rs  utils.rs  visits.rs
templates/: 404.html  article-full.html  article-teaser.html  article.html  error.html  me.html  page.html  rss-article.xml  rss-feed.xml  timeline-article.html  timeline.html
(+9 files in other folders)
