[package]
name = "server"
version = "0.0.0"
edition = "2018"

[dependencies]
comrak = "0.9"
consistenttime = "0.2.0"
hyper = { version = "0.14.4", features = ["full"] }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_qs = "0.8"
simplelog = "0.10.0"
tokio = { version = "1.8.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"]}
url = "2.2"
warp = "0.3.1"
lazy_static = "1.4.0"
http = "0.2.4"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
nom = "6.2.1"
itertools = "0.10.1"
toml = "0.5.8"
rustls = "0.19.1"
tokio-rustls = "0.22.0"
async-stream = "0.3.2"
futures-util = "0.3.15"
