[package]
name = "server"
version = "0.0.0"
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
actix-service = "2.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
comrak = "0.9"
consistenttime = "0.2.0"
filesize = "0.2.0"
futures = "0.3.15"
http = "0.2.4"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "6.2.1"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustls = "0.19.1"
rustls-pemfile = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_with = { version = "1.9.4", features = ["chrono"] }
simplelog = "0.10.0"
string-builder = "0.2.0"
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
